--- a/pump-control.service
+++ b/pump-control.service
@@ -15,6 +15,11 @@ Environment=TANK_TEMPS=32.5,22.0,45.0
 Environment=TANK_PHS=6.8,7.2,6.5
 Environment=GPIO_BACKEND=gpiozero
 Environment=GPIOZERO_PIN_FACTORY=lgpio
+Environment=PERSIST_SAMPLE_SEC=5
+Environment=PERSIST_RETENTION_DAYS=30
+Environment=DATA_DB_PATH=/home/pi/pi-control-program/data/runtime.db
+Environment=LIFT_SPEED_MM_S=10
+Environment=LIFT_MAX_MM=1000
 ExecStart=/home/pi/pi-control-program/.venv/bin/uvicorn app:app --host 0.0.0.0 --port 8000
 Restart=on-failure
 RestartSec=2
